# pdf2

./: Cargo.toml  noxfile.py  pyproject.toml
.github/workflows/: CI.yml  test.yaml
src/: generator.rs  lib.rs  parser.rs  pdf_operations.rs  structure.rs  test_lib.rs
src/pdf2/: __init__.py  _core.pyi  encryption.rs  generator.rs  metadata.rs  mod.rs  parser.rs  structure.rs  test_encryption.rs  test_metadata.rs
tests/: test_pdf2.py  test_sample.py
