[package]
name = "pdf2"
version = "0.1.0"
edition = "2021"
description = "A Python module implemented in Rust"
license = "MIT"
repository = "https://github.com/your-username/pdf2"
keywords = ["pdf", "rust", "python"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pdf2"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.25.0"
