[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "pdf2"
requires-python = ">=3.8"
description = "A Python module implemented in Rust"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
keywords = ["pdf", "rust", "python"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/your-username/pdf2"
Repository = "https://github.com/your-username/pdf2"
Issues = "https://github.com/your-username/pdf2/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pdf2"
